
2012-05-24  Carsten Haitzler (The Rasterman)

        * Fix evas_object_image_memfile_set() on non-linux systems.

2012-05-29  Tom Hacohen (TAsn)

	* Text: Fixed an issue with text object sizing.
	* Font: Fixed run-time italic.

2012-05-30  ChunEon Park (Hermet)

	* Fixed to clean up when map actually changed. Now rendering updates will be
	correct after evas_map acutally disabled/enabled for the smart object.

2012-05-30  Cedric Bail

	* Don't wake up prepare thread if there is nothing to prepare.

2012-05-30  Daniel Zaoui

	* Fix evas_free callback deletion to not sometimes abort evas freeing
        in some situations, thus leaking.

2012-06-10  Carsten Haitzler (The Rasterman)

        * Fix evas font handling so bitmap fonts work again like they
        once did. This ifxes max height, and max ascent/descent
        calculation for 0 em fonts with 0 bbox size (bitmap case), and
        fixes 1 rounding error in text objects that placed ascent in the wrong
        place by 1 pixel for even ascents.

2012-06-10  Cedric Bail

	* Limit the updated region to fit in CPU cache for Pipe rendering.

2012-06-12  ChunEon Park (Hermet)

 	* Fixed simple line drawing on s/w backened. Unmatched loop scope caused the
  	destination buffer pointer march in place.

2012-06-12  ChunEon Park (Hermet)

 	* Removed empty evas_object_map_source_set/get APIs. Will Not be implemented.

2012-06-13  Mike Blumenkrantz

        * Fix crash in evas_object_image_add() when called prior to setting an engine
          for the given canvas.

2012-06-14  Cedric Bail

	* Cache convertion from Evas_Map to RGBA_Map.

2012-06-15  Vincent Torri

	* Add Textgrid object.

2012-06-15  Mike Blumenkrantz

        * evas_object_smart_members_get() now returns NULL on non-smart objects

2012-04-26  Carsten Haitzler (The Rasterman)

        * Fix GL engine bitmap font handling

2012-06-19  Vincent Torri

	* Remove uselesss software DirectDraw 16 bits engine
